[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmind"
version = "0.1.1"
description = "A lightweight mathematical vector and linear algebra library."
authors = [
  { name="Angad kumar", email="spicarr.tech@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]